Admin, auth, and config cleanup.